<resources>
    <string name="app_name">DynamicGPTChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dynamic ChatterBot</string>
    <string name="nav_header_subtitle">Connect, Converse, Create</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="settings">Settings</string>

    <string name="menu_home">Chats</string>
    <string name="menu_prompts">Prompts</string>


    <!-- Strings used for fragments for navigation -->
    <string name="chat_tree_list_label">Dynamic GPT Chats</string>
    <string name="chat_node_list_label">Conversation</string>
    <string name="chat_tree_settings_label">Chat Settings</string>

    <string name="app_settings_label">App Settings</string>
    <string name="prompt_settings_label">Custom Prompts</string>
    <string name="about_label">About App</string>
    <string name="new_item">New Item</string>
    <string name="tree_title">Title</string>


    <!-- Prompt Page -->
    <string name="dialog_title_edit">Edit Prompt</string>
    <string name="dialog_title_add">Create Prompt</string>
    <string name="prompt_select">Select Prompt</string>
    <string name="prompt_edit">Edit Prompt</string>
    <string name="prompt_copy">Copy Prompt</string>
    <string name="prompt_delete">Click to delete prompt</string>
    <string name="prompt_search_view_tag">View Tag Filter</string>
    <string name="prompt_search_submit">Submit Filter</string>
    <string name="prompt_text_filter">Filter By Text</string>
    <string name="prompt_tag_filter">Filter By Tag</string>
    <string name="prompt_title">Prompt Title</string>
    <string name="prompt_tags">Prompt Tags</string>
    <string name="prompt_body">Prompt Body</string>



    <!-- Chat Node Settings Page-->
    <string name="undo">Undo</string>
    <string name="items_not_saved">Items Not Saved</string>

    <string name="save">Save</string>
    <string name="title_label">Title</string>
    <string name="title_hint">Enter a title</string>
    <string name="system_message_label">System Message</string>
    <string name="system_message_hint">Message always sent before all others</string>
    <string name="mode_label">Mode</string>
    <string name="model_label">Model</string>
    <string name="model_details">Model Details</string>
    <string name="temperature_label">Temperature (%.2f)</string>
    <string name="max_tokens_label">Max Tokens (%.0f)</string>
    <string name="top_p_label">TopP (%.2f)</string>
    <string name="frequency_penalty_label">Frequency Penalty (%.2f)</string>
    <string name="presence_penalty_label">Presence Penalty (%.2f)</string>
    <string name="stop_list_label">Stop String (4 max, comma to enter)</string>
    <string name="stop_list_hint">Strings to halt messages</string>
    <string name="logit_bias_label">Logit Bias (comma to enter)</string>
    <string name="logit_bias_hint">Adjust token probability -100 to 100 (eg 123=69)</string>
    <string name="number_of_label">Number of (%.0f)</string>
    <string name="best_of_label">Best of (%.0f)</string>
    <string name="inject_start_text_label">Inject Start Text</string>
    <string name="inject_start_text_hint">Injected before generated output</string>
    <string name="inject_restart_text_label">Inject Restart Text</string>
    <string name="inject_restart_text_hint">Injected between multiple outputs</string>
    <string-array name="mode_options">
<!--        <item>Completion</item>-->
        <item>ChatCompletion</item>
    </string-array>
    <string-array name="model_options">
        <item>gpt-3.5-turbo</item>
        <item>gpt-4</item>
        <item>davinci</item>
        <item>davinci-instruct-beta</item>
        <item>text-davinci-001</item>
        <item>text-davinci-002</item>
        <item>text-davinci-003</item>
        <item>text-davinci-edit-001</item>
        <item>curie-instruct-beta</item>
        <item>text-curie-001</item>
        <item>text-babbage-001</item>
        <item>text-ada-001</item>
    </string-array>
    <string name="title_tooltip"></string>
    <string name="mode_tooltip">"Mode" for generating text: \'completion\' for completing a prompt or sentence, and \'chat\' for generating text in a conversational context.</string>
    <string name="model_tooltip">"GPT model" to use for text generation: Each model has different capabilities and performance on different tasks.</string>
    <string name="temperature_tooltip">"Temperature" controls text creativity: lower values produce conservative, predictable text, while higher values result in more creative and unexpected text.</string>
    <string name="max_tokens_tooltip">"The "maximum number of tokens (words or symbols) to generate in the output.</string>
    <string name="top_p_tooltip">"TopP" controls text diversity: higher values, more diverse output; lower values, more repetition.</string>
    <string name="frequency_penalty_tooltip">"Frequency penalty": controls how much the model avoids repeating words or phrases in output.</string>
    <string name="presence_penalty_tooltip">"Presence penalty": controls how much the model avoids including prompt words or phrases in output.</string>
    <string name="stop_list_tooltip">"Stop": Up to 4 sequences; API stops generating tokens beyond them. Omitted in response. (press comma to enter, "\\n" converts)</string>
    <string name="logit_bias_list_tooltip">"Logit Bias":  Adjust the likelihood of specific tokens appearing in the text by applying a bias value. ("token_id=weight", weight -100 : 100)</string>
    <string name="number_of_tooltip">"n" parameter: controls the number of output sequences the model returns.</string>
    <string name="best_of_tooltip">"Best of": controls the number of output sequences the model generates, returning the highest-scoring one.</string>
    <string name="inject_start_text_tooltip">"Inject start text": text to add before the generated output.</string>
    <string name="inject_restart_text_tooltip">"Inject restart text": text to add between multiple output sequences.</string>
    <string name="system_message_tooltip">"System message": message used to instruct ChatGPT on how to behave and the context to reference.</string>
    <string name="submit">Submit</string>
    <string name="enter_prompt">Enter prompt</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Node Page -->
    <string name="prompt_entry_new">New Prompt Entry</string>
    <string name="system_message_save">Save System Message</string>
    <string name="system_message_cancel">Discard Edited System Message</string>
    <string name="system_message_insert_prompt">Insert Prompt</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_select_all">Select All</string>
    <string name="title_items_selected">%d items selected</string>


    <!--  Chat Node Popup Menu  -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_new_message">Create new message</string>
    <string name="replace_current_message">Replace current message</string>
    <string name="cancel_editing_message">Cancel editing message</string>
    <string name="regenerate">Regenerate</string>
    <string name="popup_menu_show">Show Popup Menu</string>

    <!-- chat node list item -->
    <string name="response">Response</string>
    <string name="prompt">Prompt</string>
    <string name="moderation_message">Moderation result</string>
    <string name="error_message">Error message</string>


    <!--  App Settings  -->
    <string name="openai_api_key">OpenAI API Key</string>
    <string name="api_key_hint">Stored and encrypted locally</string>
    <string name="theme">Theme</string>

    <!--  About page  -->
    <string name="about">About</string>
    <string name="about_app">About this application</string>
    <string name="easter_egg">easter egg</string>

    <string name="stop_and_load_dot">M 5 2.5 A 2.5 2.5 0 0 1 2.5 5 A 2.5 2.5 0 0 1 0 2.5 A 2.5 2.5 0 0 1 2.5 0 A 2.5 2.5 0 0 1 5 2.5 Z</string>
    <string name="knightrider_rect">M 0 6 L 0 0 L 12 0 L 12 6 Z</string>

    <!--  Chat Options Dialog  -->
    <string name="chat_options_toggle">Chat Options Toggle</string>
    <string name="tokens_used_label">Tokens                     Used:</string>
    <string name="tokens_prompts">Prompts:\n%d</string>
    <string name="tokens_response">Response:\n%d</string>
    <string name="tokens_total">Total:\n%d</string>
    <string name="request_type_label">Request Type:</string>
    <string name="request_type_streaming">Streaming</string>
    <string name="request_type_full_response">Simple</string>
    <string name="enter_key_label">Enter Is:</string>
    <string name="enter_key_submit">Send</string>
    <string name="enter_key_new_line">New Line</string>
    <string name="moderate_response_label">Moderate:</string>
    <string name="moderate_no">No</string>
    <string name="moderate_yes">Yes</string>
    <string name="response_wrap_label">Response wrap:</string>
    <string name="response_wrap">Wrap</string>
    <string name="response_no_wrap">No Wrap</string>
    <string name="response_custom">Size:</string>
    <string name="response_wrap_custom_size">Custom wrap size</string>

    <!--  Test  -->
    <string name="test_enter_prompt">Enter Prompt</string>
    <string name="test_response_output_here">Response Output Here</string>
    <string name="test_using_completion">Using Completion</string>
    <string name="test_submit">Submit</string>
    <string name="test_error_here">Error Here</string>

</resources>
