<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:clipToPadding="false"
    tools:context=".chatnodes.ChatNodeHeaderAdapter"
    >

    <LinearLayout
        android:id="@+id/prompt_holder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/message_bubble_center"
        android:backgroundTint="@color/md_theme_dark_primary"

        android:elevation="4dp"
        android:translationZ="4dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingHorizontal="8dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"

            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/md_theme_dark_onSurface"
            app:hintTextColor="@color/md_theme_dark_onSurface"
            android:textColorHint="@color/md_theme_dark_onSurface"
            android:hint="@string/system_message_label"

            app:expandedHintEnabled="false"

            android:theme="@style/textHandleOnColor"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/system_message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="6dp"
                android:paddingBottom="6dp"
                android:gravity="start"

                android:hint="@string/system_message_hint"

                android:inputType="textMultiLine|textAutoCorrect"
                android:maxLines="1000"
                android:minLines="2"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="@color/md_theme_light_outlineVariant"
                android:textSize="@dimen/abc_text_size_body_1_material" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/system_message_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="6dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginStart="-6dp"
            android:paddingBottom="6dp"
            tools:ignore="RtlHardcoded">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_system_message_cancel_button"
                style="?android:attr/borderlessButtonStyle"
                app:icon="@drawable/round_close_24"
                app:iconTint="@color/md_theme_dark_onSurface"
                app:iconSize="24dp"
                android:paddingStart="3.5dp"
                android:contentDescription="@string/system_message_cancel"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                app:cornerRadius="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/edit_system_message_submit_button"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_system_message_submit_button"
                style="?android:attr/borderlessButtonStyle"
                app:icon="@drawable/round_check_24"
                app:iconTint="@color/md_theme_dark_onSurface"
                app:iconSize="24dp"
                android:paddingStart="3.5dp"
                android:contentDescription="@string/system_message_save"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"

                app:cornerRadius="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_system_message_cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:visibility="gone"
                android:id="@+id/system_message_insert_prompt_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_round_icon"
                android:backgroundTint="@color/md_theme_dark_secondary"
                android:contentDescription="@string/system_message_insert_prompt"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_p_note_24"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/chat_node_selected"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"

        android:alpha="0.4"
        android:elevation="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>